data/azure/gpt-2-large-tf/network-subnet-public_ip/sample-40/main.tf
terraform {
  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
    }
  }
}

# Provider block with features block
provider "azurerm" {
  features {}
}

# create resource group, use name example-resources and set location to West Europe
resource "azurerm_resource_group" "name_0" {
  name     = "myresources"
  location = "westus2"
}

# a virtual network resource in address space 10.0.0.0/16. Use location and resource group name
resource "azurerm_network_security_group" "name_1" {
  name                = "mynetwork-security-group"
  location            = "westus2"
  resource_group_name = azurerm_resource_group.rg.name
  address_space       = ["10.0.0.0/16"]
}

# create subnet resource, with address prefix 10.0.1.0/24. Use virtual network name and the resource group name
resource "azurerm_network_security_rule" "name_2" {
  name                = "mynetwork-egress"
  priority               = 100
  direction              = "Inbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "22"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name  = azurerm_resource_group.rg.name
  network_security_group_name = azurerm_network_security_group.name_1.name
}

# resource block of public ip. Use allocation method static and sku standard. Use resource group name and location
resource "azurerm_network_security_rule" "name_3" {
  name                = "mynetwork-egress-allow-all"
  priority               = 100
  direction              = "Inbound"
  access                 = "Allow"
  protocol               = "Tcp"
  source_port_range      = "*"
  destination_port_range = "80"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name  = azurerm_resource_group.rg.name
  network_security_group_name = azurerm_network_security_group.name_1.name
}
